<resources>
    <string name="app_name">Internet Speed Monitor</string>

    <!--    speed-->
    <string name="kBps">kB/s</string>
    <string name="MBps">MB/s</string>
    <string name="kbps">kb/s</string>
    <string name="Mbps">Mb/s</string>

    <string name="plus99">99+</string>
    <string name="dash">-</string>

    <!-- Option menu -->
    <string name="about">About</string>
    <string name="rate_this_app">Rate this app</string>

    <!-- About -->
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_email" translatable="false">netspeed.indicator@gmail.com</string>
    <string name="feedback_subject">Feedback about NetSpeed Indicator App</string>
    <string name="made_with_love_in_india">Made with ❤️ in India</string>

    <!-- Notification Layout -->
    <string name="notif_notification_icon">Notification Icon</string>
    <string name="notif_settings_button">Settings Button</string>

    <string name="notif_up_down_speed">Down: %s %s "   " Up: %s %s</string>

    <!-- Settings -->
    <string name="pref_enable_indicator_title">Enable Monitor</string>
    <string name="pref_enable_indicator_summary">Show Internet Speed Monitor in the status bar</string>

    <string name="pref_notification_settings_title">Notification Settings</string>

    <string name="pref_settings_button_title">Settings button</string>
    <string name="pref_settings_button_summary">Show a button in notification to open settings</string>

    <string name="pref_notification_priority_title">Notification priority</string>
    <string name="pref_notification_priority_max">Maximum</string>
    <string name="pref_notification_priority_high">High</string>
    <string name="pref_notification_priority_default">Normal</string>
    <string name="pref_notification_priority_low">Low</string>

    <string name="pref_indicator_speed_to_show">Speed to show in indicator icon</string>
    <string name="pref_indicator_speed_total">Total speed</string>
    <string name="pref_indicator_speed_down">Download speed</string>
    <string name="pref_indicator_speed_up">Upload speed</string>

    <string name="pref_lockscreen_notification_title">Lockscreen notification</string>
    <string name="pref_lockscreen_notification_summary_on">Notification is visible on lockscreen</string>
    <string name="pref_lockscreen_notification_summary_off">Notification is hidden from lockscreen</string>

    <string name="pref_speed_unit_title">Speed units</string>
    <string name="pref_speed_unit_Bps">Bytes per second</string>
    <string name="pref_speed_unit_bps">Bits per second</string>

    <string name="pref_general_options_title">General Options</string>

    <string name="pref_start_on_boot_title">Start on boot</string>
    <string name="pref_start_on_boot_summary">Start NetSpeed indicator on boot</string>
    <string name="pref_start_on_boot_summary_on">The indicator will be started on boot</string>
    <string name="pref_start_on_boot_summary_off">The indicator will not be started on boot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>